terminar nav y arreglar alumnos1daw

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,14 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- <app-empleado></app-empleado> -->
+ <ul class="navbar-nav me auto">
+    <li class="nav-item">
+        <a class="nav-link active" router-Link="home">Home</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" [routerLink]="'empleado'">Empleado</a>
+        </li>
+ </ul>
 <app-alumnado-daw><app-alumnado-daw>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
