--- a/src/app/empleado/empleado.component.html
+++ b/src/app/empleado/empleado.component.html
@@ -15,3 +15,7 @@
         <li>Lista de trabajadores internos</li>
     }
 </ul>
+
+<p>menu</p>
+
+<button class="btn btn-primary" (click)="navigateToHome()">Ir a inicio</button>
